# fernico

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: main.rs
core/src/models/: account.rs  category.rs
core/src/tui/account/: args.rs
core/src/tui/credit/: args.rs
migrations/: 20250320_init.sql  20250321_cascades.sql
service/: Cargo.toml
service/src/: add_expense.rs  interface.rs  lib.rs
src/: args.rs  main.rs
src/accounts/: args.rs  mod.rs
src/args/: mod.rs
src/commands/: add_expense.rs  mod.rs
src/import/: args.rs  mod.rs
src/models/: account.rs
src/tui/: mod.rs
src/tui/account/: args.rs  mod.rs
src/tui/debit/: args.rs
src/tui/export/: args.rs
src/tui/import/: args.rs  mod.rs
src/tui/transfer/: args.rs
