[package]
name = "fernico"
description = "Store expenses"
version = "0.1.0"
authors = ["Julio Biason <julio.biason@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rust_decimal = "1.13"
chrono = "0.4"
env_logger = "0.8"
log = "0.4"
