[workspace]
members = ["core"]
default-members = ["core"]
resolver = "2"

[workspace.package]
name = "fernico"
version = "0.1.0"
edition = "2021"
authors = ["Julio Biason <julio.biason@pm.me>"]

[workspace.dependencies]
tokio = { version = "1.44.1", features = ["rt", "macros"] }

[profile.release]
lto = true
codegen-units = 1
